<resources>
    <string name="app_name">ဦးပို္င္ အစုရွယ္ယာ</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">About Us</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="form_username">User Name</string>
    <string name="prompt_email">Amount</string>
    <string name="prompt_password">Month</string>
    <string name="action_sign_in">Calculate</string>
    <string name="amount">အစုရွယ္ယာ ထည့္ဝင္ေငြ</string>
    <string name="month">အစုရွယ္ယာ ထည့္ဝင္သည့္ကာလ (လ)</string>
    <string name="calculate">အျမတ္ေငြ တြက္ခ်က္ပါ</string>
    <string name="amount_label">အစုရွယ္ယာ ထည့္ဝင္ေငြ</string>
    <string name="month_label">အစုရွယ္ယာ ထည့္ဝင္သည့္ကာလ (လ)</string>
    <string name="clear">ရွင္းလင္းပါ</string>
    <string name="total_amount">စုစုေပါင္း အျမတ္ေငြ : 0 က်ပ္</string>
    <string name="test">test</string>
    <string name="dialog_title">MEC Share</string>
    <string name="dialog_message">MEC Share Calculator is developed by TEAM CS 16</string>
    <string name="dialog_ok_button">OK</string>
    <string name="exit_greeting">Press Back to Exit</string>

    <string name="enter_amount">အစုရွယ္ယာ ထည့္ဝင္ေငြ ရိုက္ထည့္ပါ</string>
    <string name="enter_month">အစုရွယ္ယာ ထည့္ဝင္သည့္ကာလ (လ) ရိုက္ထည့္ပါ</string>
    <string name="cleared">ရွင္းလင္းျပီး!</string>
    <string name="action_how_calculate">အျမတ္ေငြ တြက္နည္း</string>
</resources>
